# table_htmx

./: .env  .gitignore  Cargo.toml
migrations/: 20231027212955_recipes.down.sql  20231027212955_recipes.up.sql
src/: api.rs  main.rs  routes.rs  templates.rs
templates/: index.html  recipes.html
